--- a/social.css
+++ b/social.css
@@ -103,151 +103,16 @@ html {
     display: none;
 }
 
-/*cards*/
-.container__cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    gap: 10px;
-    max-width: 700px;
-    padding: 5px;
-    justify-content: center;
+.sound audio{
+    
 }
-
-.cards {
-
-    width: 100px;
-    height: 100px;
-    border: 1px solid #5f6368;
-    border-radius: 5px;
-    background-color: transparent;
-    cursor: pointer;
-    box-shadow: 0px 0px 5px #5f63686a;
-   
-
-}
-
-.conteudo__cards {
-    display: flex;
-
-    flex-direction: column;
-    justify-content: center;
-}
-
-.conteudo__cards h2 {
-    color: #fff;
-    font-size: 20px;
-
-
-}
-
-.container__cards p {
-    text-align: justify;
-    font-size: 13px;
-    padding: 5px;
-}
-
-/* início das sections*/
-
-.container__section1,
-.container__section2,
-.container__section3,
-.container__section4{
-    width: 99%;
-    margin: auto;
-    padding: 10px;
-    background-color: #202124;
-    border-radius: 5px;
-    display: none;
-    border: 1px solid #5f6368;
-    margin-top: 5px;
-
-}
-.container__section5,
-.container__section6,
-.container__section7,
-.container__section8{
-    width: 99%;
-    margin: auto;
-    padding: 10px;
-    background-color: #202124;
-    border-radius: 5px;
-    display: none;
-    border: 1px solid #5f6368;
-    margin-top: 5px;
-}
-
-.section__card1 {}
-
-.section__card1 h2 {
-    color: #5f6368;
-    font-size: 30px;
-    margin-bottom: 10px;
-}
-
-.section__card1 p {
-    color: #fff;
-}
-
-.conteudo__cards h2 {
-    font-size: 12px;
-    text-align: center;
-    text-transform: capitalize;
-    color: #5f6368;
-}
-
-
-
-/*icones*/
-#icone__rocket {
-    font-size: 70px;
-    color: #5f6368;
-    text-align: center;
-
-
-}
-
-#icone__rocket:hover {
-    transform: translatey(-5px);
-
-}
-
-#icone__ideia {
-    font-size: 70px;
-    color: #5f6368;
-    text-align: center;
-}
-
-#icone__ideia:hover {
-    transform: translatey(-5px);
-}
-
-#icone__praticas {
-    font-size: 70px;
-    color: #5f6368;
-    text-align: center;
-}
-
-#icone__praticas:hover {
-    transform: translatey(-5px);
-}
-
-#icone__ {
-    font-size: 70px;
-    color: #5f6368;
-    text-align: center;
-}
-
-#icone__:hover {
-    transform: translatey(-5px);
-}
-
 
 /*img slider*/
 #slider {
     width: 88%;
     max-width: 500px;
     height: 45vw;
-    max-height: 150px;
+    max-height: 240px;
     position: relative;
     margin-top: 65px;
     margin: 65px auto 10px;
@@ -269,10 +134,54 @@ html {
 #slider img.selected {
     opacity: 1;
 }
+/*cards*/
+
+.container__main{
+    width: 100%;
+    
+    
+}
+.cards{
+    width: 88%;
+    border: 1px solid #5f6368;
+    box-shadow: 0px 0px  10px #5f6368;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    margin: 10px auto;
+    
+
+}
+.card{
+    height: 300px;
+     
+}
+
+.card span{
+    display: flex;
+    justify-content: center;
+   
+    font-size: 80px;
+    padding: 10px;
+    cursor: pointer;
+    color: #5f6368;
+}
+.card h3{
+    color: #5f6368;
+    text-align: center;
+    font-size: 25px;
+}
+.cards p{
+    text-align: justify;
+    margin: 5px 13px;
+    font-size: 18px;
+    color: #e6ecf0c4;
+}
+
+
 
 /*footer*/
 .container__footer {
-    background-color: #1414167b;
+    background-color: #141416;
     position: fixed;
     width: 100%;
     bottom: 5px;
