--- a/medias.css
+++ b/medias.css
@@ -41,3 +41,48 @@
     
     
 }
+
+@media screen  and (max-width: 366px){
+
+    .container__geral__todos{
+        width: 85%;
+        margin: auto;
+    }
+    .container__iconemenu__form{
+        left: 0;
+        
+    }
+    .foto__perfil img{
+        margin-right: 10px;
+    }
+    .nav{
+        width: 100vw;
+        margin-left: -40px;
+        
+    }
+    .container__cards {
+        width: 100%;
+        margin: auto;
+        
+    }
+    .card h3{
+        font-size: 19px;
+    }
+    .card p{
+        font-size: 15px;
+    }
+    .container__geralSection1{
+        width: 89%;
+        margin: auto;
+    }
+    .container__main{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    .container__footer{
+        left: 0;
+        margin: auto;
+    }
+
+}
