--- a/social.css
+++ b/social.css
@@ -19,16 +19,15 @@ html {
     margin: auto;
 }
 
-.container__geral {
-    border-radius: 13px;
-}
+
 
 #menu__hamburguer {
     color: #5f6368;
     font-size: 35px;
     cursor: pointer;
 }
-#menu__hamburguer:hover{
+
+#menu__hamburguer:hover {
     color: #fff;
 }
 
@@ -44,21 +43,44 @@ html {
     width: 100vw;
     top: 0;
 }
-
-.foto__perfil img {
-    width: 70px;
+.conteudo__icones__nav{
+    display: flex;
 }
+.nav__icones{
+    
+}
+.nav__icones ul{
+    display: flex;
+    
+    
+}
+.nav__icones ul li a{
+    padding-right: 30px;
+    
+    
+}
+#sp {
+    color: #5f6368;
+    font-size: 40px;
+    
+}
+
+#sp:hover {
+    transform: translateY(-5px);
+    color: #fff;
+}
+
 
 .nav {
     background-color: #5f6368;
     display: none;
     margin-top: 50px;
-
-
+    position: fixed;
+    top: 0;
 }
 
 .menu {
-    margin-bottom: -50px;
+    
 }
 
 .lista__menu {}
@@ -82,30 +104,7 @@ html {
     background-color: rgba(255, 255, 255, 0.142);
 }
 
-/*formulário*/
-.formulario__principal {
-    display: flex;
-}
 
-#textarea__formprincipal {
-    outline: none;
-    border: #5f6368;
-    margin-right: 10px;
-    width: 200px;
-    height: 27px;
-    border-radius: 5px;
-    background-color: #cad2db;
-}
-
-#enviar {
-    padding-left: 5px;
-    padding-right: 5px;
-    display: none;
-}
-
-.sound audio{
-    
-}
 
 /*img slider*/
 #slider {
@@ -134,87 +133,55 @@ html {
 #slider img.selected {
     opacity: 1;
 }
+
 /*cards*/
 
-.container__main{
+.container__main {
     width: 100%;
-    
-    
+
+
 }
-.cards{
+
+.cards {
     width: 88%;
     border: 1px solid #5f6368;
-    box-shadow: 0px 0px  10px #5f6368;
     margin-bottom: 10px;
     border-radius: 5px;
     margin: 10px auto;
-    
+
 
 }
-.card{
-    height: 300px;
-     
+
+.card {
+    height: 250px;
+
+}
+.card:hover{
+    background-color: #5f636829;
 }
 
-.card span{
+.card span {
     display: flex;
     justify-content: center;
-   
+
     font-size: 80px;
     padding: 10px;
     cursor: pointer;
     color: #5f6368;
 }
-.card h3{
+
+.card h3 {
     color: #5f6368;
     text-align: center;
     font-size: 25px;
+    margin-bottom: 20px;
 }
-.cards p{
+
+.cards p {
     text-align: justify;
     margin: 5px 13px;
     font-size: 18px;
     color: #e6ecf0c4;
 }
 
-
-
-/*footer*/
-.container__footer {
-    background-color: #141416;
-    position: fixed;
-    width: 100%;
-    bottom: 5px;
-    height: 60px;  
-    box-shadow: 0px 0px 5px #5f6368;
-    padding: 10px;
-    bottom: 0;
-
-}
-
-.footer {
-    
-}
-
-.conteudo__footer {}
-
-.nav__footer ul {
-    display: flex;
-    justify-content: center;
-    
-   
-}
-
-.nav__footer ul li {
-    padding: 0px 10px 0px 10px;
-}
-
 /*spans dos icones da navegação do footer*/
-#sp{
-    color: #5f6368;
-    font-size: 40px;  
-}
-#sp:hover{
-    transform: translateY(-5px);
-    color: #fff;
-}
