--- a/social.css
+++ b/social.css
@@ -43,30 +43,36 @@ html {
     width: 100vw;
     top: 0;
 }
-.conteudo__icones__nav{
+
+.conteudo__icones__nav {
     display: flex;
+
 }
-.nav__icones{
-    
-}
-.nav__icones ul{
+
+.nav__icones {}
+
+.nav__icones ul {
     display: flex;
-    
-    
+    margin-right: 60px;
+
 }
-.nav__icones ul li a{
+
+.nav__icones ul li a {
     padding-right: 30px;
-    
-    
+
+
 }
+
 #sp {
     color: #5f6368;
-    font-size: 40px;
-    
+    font-size: 37px;
+    margin-right: 40px;
+
+
 }
 
 #sp:hover {
-    transform: translateY(-5px);
+
     color: #fff;
 }
 
@@ -79,9 +85,7 @@ html {
     top: 0;
 }
 
-.menu {
-    
-}
+.menu {}
 
 .lista__menu {}
 
@@ -104,34 +108,35 @@ html {
     background-color: rgba(255, 255, 255, 0.142);
 }
 
-
-
-/*img slider*/
-#slider {
-    width: 88%;
-    max-width: 500px;
-    height: 45vw;
-    max-height: 240px;
-    position: relative;
-    margin-top: 65px;
-    margin: 65px auto 10px;
+/*slids das imagens*/
+#items-wrapper{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    
+    
 }
-
-#slider img {
-    opacity: 0;
-    border-radius: 5px;
-    position: absolute;
-
-    width: 100%;
-    height: 100%;
-    object-fit: inherit;
-
-
-    transition: opacity 800ms;
+#items{
+    margin-right: 13px;
+    display: flex;
+    max-width: 450px;
+    overflow-x: auto;
+    margin-top: 60px;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
 }
-
-#slider img.selected {
-    opacity: 1;
+.item{
+   flex: none;
+   width: 90%;
+   height: 300px;
+   pointer-events: none;
+  
+}
+.item img{
+   object-fit: cover;
+   width: 100%;
+    height: 99%;
 }
 
 /*cards*/
@@ -156,7 +161,8 @@ html {
     height: 250px;
 
 }
-.card:hover{
+
+.card:hover {
     background-color: #5f636829;
 }
 
