--- a/social.css
+++ b/social.css
@@ -153,12 +153,14 @@ html {
     margin-bottom: 10px;
     border-radius: 5px;
     margin: 10px auto;
+    
 
 
 }
 
 .card {
-    height: 250px;
+    height: 150px;
+   
 
 }
 
@@ -169,7 +171,7 @@ html {
 .card span {
     display: flex;
     justify-content: center;
-
+    
     font-size: 80px;
     padding: 10px;
     cursor: pointer;
@@ -182,12 +184,31 @@ html {
     font-size: 25px;
     margin-bottom: 20px;
 }
+/*icones de expandir, dentro dos cards*/
+#i-less{
+   padding-top: 30px;
+   margin-left: 43%;
+   font-size: 50px;
+   cursor: pointer;
+  
+}
 
-.cards p {
+
+#card1,
+#card2,
+#card3,
+#card4,
+#card5,
+#card6,
+#card7{
+    display: none;
+    color: #fff;
     text-align: justify;
-    margin: 5px 13px;
-    font-size: 18px;
-    color: #e6ecf0c4;
+    margin: 5px 30px;
+    border: 1px solid #5f6368;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: #5f636860;
 }
 
 /*spans dos icones da navegação do footer*/
