--- a/social.css
+++ b/social.css
@@ -127,13 +127,14 @@ html {
     scroll-snap-type: x mandatory;
     -webkit-overflow-scrolling: touch;
     scroll-behavior: smooth;
+    
 }
 
 .item {
     flex: none;
-    width: 90%;
+    width: 97%;
     height: 300px;
-    pointer-events: none;
+   
 
 }
 
@@ -141,7 +142,7 @@ html {
     object-fit: cover;
     width: 100%;
     height: 99%;
-    position: static;
+    position: none;
 }
 
 /*cards*/
