--- a/social.css
+++ b/social.css
@@ -165,8 +165,9 @@ html {
 .card__menores{
     display: flex;
     justify-content: center;
-   padding: 5px;
+    padding: 5px;
     margin: auto;
+    width: 92%;
 
    
   
@@ -178,7 +179,8 @@ html {
     display: flex;  
     flex-direction: column;
     width: 200px;
-    height: 70px;
+    height: 90px;
+
     
 }
 .card__men:hover{
@@ -186,9 +188,12 @@ html {
 }
 .card__men  span{
     color: #5f6368;
-    text-align: center;
     font-size: 30px;
-    margin-top: 5px;
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+    
+   
 }
 .card__men  h3{
     font-size: 13px;
