--- a/medias.css
+++ b/medias.css
@@ -1,188 +1,190 @@
+@media screen and (max-width: 376px) {
+    body {
+        max-width: 376px;
+    }
 
-
-
-
-@media screen  and (max-width: 768px){
-    .container__geral__todos{
+    .nav {
         width: 100%;
+    }
+
+    .item img {
+        max-width: 376px;
+        width: 360px;
+        border: 1px solid #5f636865;
+        border-radius: 5px;
+    }
+
+    #title__project {
         margin: auto;
     }
-    .container__iconemenu__form{
-        left: 0;
-        
-    }
-    .foto__perfil img{
-        margin-right: 10px;
-    }
-    .nav{
-        width: 100vw;
-       
-              
-    }
-    
-    .container__main{
-        width: 100%;
-    }
-    .container__cards {
-        width: 100%;
-        margin: auto;
-        
-    }
-    .container__geralSection1{
-        width: 89%;
-        margin: auto;
-    }
-    .container__main{
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-    }
-    .container__footer{
-        left: 0;
-        margin: auto;
-    }
-    .card__menores{
-      
-    }
-    .card__men{
-        
-    
-        
-    }
-    
-    .card__men  span{
-        
-        
-       
-    }
-  
-}
-@media screen and (max-width: 376px)  {
-    #ps{
-        margin-right: -40px;
-    }
-    .container__main{
-        margin-top: 5px;
-    }
-    .cards h3{
-        font-size: 20px;
-    }
-    .cards p{
-        font-size: 16px;
-    }
 
-    .card__menores{
-      
-    }
-    .card__men{
-        
-    
-        
-    }
-    
-    
-    
-}
-@media screen and (max-width: 415px) {
-    .container__main{
-        margin-top: 55px;
-    }
-    .conteudo__card1{
-        width: 100%;
-        
-        
-    }
-    .cards{
-        width: 85%;
-        margin: 5px 5px 5px 16px;
-    }
-    .card__menores{
-       width: 91%; 
-       margin-right: 70px;
+    .cards {
+        width: 95%;
 
     }
-    
-    .cards p{
-        font-size: 16px;
-    }
-    
-    #sp{
-        margin-right: 5px;
-    }
-    #items-wrapper{
+
+    .card__menores {
         width: 100%;
-        height: 100%;
-        margin-left: 5px;
-        object-fit: cover;
     }
-    #items{
-        width: 365px;
-        margin-left: 3px;
-        height: 200px;
-       
-    }
-    .item img{
-        width: 100%;
+
+    #card1 {
+        width: 95%;
         margin: auto;
     }
+
+
+
 }
 
-@media screen  and (max-width: 361px) and (max-width: 366px){
+@media screen and (max-width: 391px) {
+    body {
+        max-width: 391px;
+    }
 
-    .container__geral__todos{
+    .nav {
         width: 100%;
+    }
+
+    .item img {
+        max-width: 391px;
+        width: 380px;
+        border: 1px solid #5f636865;
+        border-radius: 5px;
+    }
+
+    #title__project {
         margin: auto;
     }
-    .container__iconemenu__form{
-        left: 0;
-        
+
+    .cards {
+        width: 95%;
+
     }
-    .foto__perfil img{
-        margin-right: 10px;
-    }
-    .nav{
-        width: 100vw;
-        
-    }
-    #sp{
-        margin-right: -10px;
-    }
-    #items-wrapper{
+
+    .card__menores {
         width: 100%;
-        height: 100%;
-        margin-left: 7px;
     }
-    .items{
-       
+
+    #card1 {
+        width: 95%;
+        margin: auto;
     }
-    
-    .item {
-        width: 90%;
-        height: 95%;
+
+
+
+}
+
+@media screen and (max-width: 394px) {
+    body {
+        max-width: 394px;
     }
-    .container__cards {
+
+    .nav {
         width: 100%;
-        margin: auto;
-        
     }
-    .card h3{
-        font-size: 19px;
+
+    .item img {
+        max-width: 391px;
+        width: 380px;
+        border: 1px solid #5f636865;
+        border-radius: 5px;
     }
-    .card p{
-        font-size: 15px;
-    }
-    .container__geralSection1{
-        width: 89%;
-        margin: auto;
-    }
-    .container__main{
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-    }
-    .container__footer{
-        left: 0;
+
+    #title__project {
         margin: auto;
     }
+
+    .cards {
+        width: 95%;
+
+    }
+
+    .card__menores {
+        width: 100%;
+    }
+
+    #card1 {
+        width: 95%;
+        margin: auto;
+    }
+
+
+
+}
+
+@media screen and (max-width: 361px) {
+    body {
+        max-width: 361px;
+    }
+
+    .nav {
+        width: 100%;
+    }
+
+    .item img {
+        max-width: 361px;
+        width: 355px;
+        border: 1px solid #5f636865;
+        border-radius: 5px;
+    }
+
+    #title__project {
+        margin: auto;
+    }
+
+    .cards {
+        width: 95%;
+
+    }
+
+    .card__menores {
+        width: 100%;
+    }
+
+    #card1 {
+        width: 95%;
+        margin: auto;
+    }
+
+
+
+}
+
+@media screen and (max-width: 413px) {
+    body {
+        max-width: 413px;
+    }
+
+    .nav {
+        width: 100%;
+    }
+
+    .item img {
+        margin-top: 13px;
+        max-width: 413px;
+        width: 405px;
+        border: 1px solid #5f636865;
+        border-radius: 5px;
+    }
+
+    #title__project {
+        margin: auto;
+    }
+
+    .cards {
+        width: 95%;
+
+    }
+
+    .card__menores {
+        width: 100%;
+    }
+
+    #card1 {
+        width: 95%;
+        margin: auto;
+    }
+
+
 
 }
