--- a/medias.css
+++ b/medias.css
@@ -1,3 +1,48 @@
+@media screen and (max-width: 300px) {
+    body {
+        max-width: 290px;
+        width: 100%;
+    }
+
+    .nav {
+        width: 100%;
+
+
+    }
+
+    #img-inicio {
+        width: 260px;
+        border: 1px solid #5f636865;
+        border-radius: 5px;
+    }
+
+    #title__project {
+        margin: auto;
+    }
+
+    .container__main {
+        width: 96%;
+        margin: auto;
+    }
+
+    .cards {
+        width: 80%;
+
+    }
+
+    .card__menores {
+        width: 80%;
+    }
+
+    #card1 {
+        width: 100%;
+        margin: auto;
+    }
+
+
+
+}
+
 @media screen and (max-width: 376px) {
     body {
         max-width: 376px;
