--- a/medias.css
+++ b/medias.css
@@ -1,30 +1,24 @@
-@media screen and (min-width: 676px ) {
-
-}
+@media screen and (min-width: 676px) {}
 
 @media screen and (max-width: 290px) {
     body {}
 
-    .nav {
-        
-        
-    }
-    #items-wrapper{
+    #itens {}
+
+    #items-wrapper {
         display: flex;
         justify-content: center;
-    
+
     }
-    .item{
-      
-       
-    }
-    
+
+    .item {}
+
 
     #img-inicio {
         width: 50%;
         border: 1px solid #5f636865;
         border-radius: 5px;
-        
+
     }
 
     #title__project {
@@ -57,29 +51,27 @@
 @media screen and (max-width: 376px) {
     body {
         max-width: 376px;
-       
-    }
-    .container__geral{
-       
+
     }
 
+    .container__geral {}
+
     .nav {
-        
-        
+        margin-top: 50px;
+
     }
-    
-    #items-wrapper{
-       
-        
-    }
-    .item{
+
+    #items-wrapper {}
+
+    .item {
+        width: 350px;
+        max-width: 370px;
         display: flex;
         justify-content: center;
     }
 
     #img-inicio {
-        width: 270px;
-        
+        width: 100%;
         border: 1px solid #5f636865;
         border-radius: 5px;
     }
@@ -87,22 +79,19 @@
     #title__project {
         margin: auto;
     }
-    .container__main{
+
+    .container__main {
         width: 97%;
         margin: auto;
     }
 
-    .cards {
-       
-
-    }
+    .cards {}
 
     .card__menores {
         width: 90%;
     }
-    #card__men{
-       
-    }
+
+    #card__men {}
 
     #card1 {
         width: 95%;
@@ -118,13 +107,16 @@
         max-width: 391px;
     }
 
-    .nav {
-        width: 100%;
+    .nav {}
+
+    .item {
+        max-width: 374px;
+
     }
 
     .item img {
-        max-width: 391px;
-        width: 380px;
+
+        width: 100%;
         border: 1px solid #5f636865;
         border-radius: 5px;
     }
@@ -156,13 +148,14 @@
         max-width: 394px;
     }
 
-    .nav {
-        width: 100%;
+    .nav {}
+
+    .item {
+        max-width: 376px;
     }
 
     .item img {
-        max-width: 391px;
-        width: 380px;
+       width: 100%;
         border: 1px solid #5f636865;
         border-radius: 5px;
     }
@@ -194,9 +187,7 @@
         max-width: 361px;
     }
 
-    .nav {
-        width: 100%;
-    }
+    .nav {}
 
     .item img {
         max-width: 361px;
@@ -227,19 +218,21 @@
 
 }
 
-@media screen and (max-width: 413px) {
+@media screen and (max-width: 415px) {
     body {
-        max-width: 413px;
+        max-width: 415px;
     }
 
     .nav {
-        width: 100%;
+        margin-top: 50px;
     }
 
+    .item {}
+
     .item img {
-        margin-top: 13px;
-        max-width: 413px;
-        width: 390px;
+
+        max-width: 100%;
+
         border: 1px solid #5f636865;
         border-radius: 5px;
     }
@@ -254,7 +247,7 @@
     }
 
     .card__menores {
-        width: 98%;
+        width: 100%;
     }
 
     #card1 {
