--- a/social.css
+++ b/social.css
@@ -71,6 +71,7 @@ html {
 
 
 .nav {
+    
     width: 100%;
     background-color: #5f6368;
     display: none;
@@ -114,10 +115,9 @@ html {
 
 }
 .item{
-    margin-top: 30%;
-    width: 200px;
-    max-width: 200px;
-   
+    width: 100%;
+   max-width: 400px;
+   margin-top: 60px;
 }
 
 #img-inicio{
@@ -170,7 +170,8 @@ html {
     justify-content: center;
     padding: 5px;
     margin: auto;
-    width: 92%;
+    width: 100%;
+    max-width: 415px;
 
    
   
